rnsc/test_data/rns_integration/error/parser/method_directive/missing_name.rns
.class MissingMethodName
.super java/lang/Object

.method
.method_end
.class_end
